--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.8",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   }
 }
